--- a/resources/style.css
+++ b/resources/style.css
@@ -1,10 +1,6 @@
+
 .kdview {
  overflow: auto; 
-}
-
-.running-link {
- width: 800px; 
- border-radius: 5px;
 }
 
 .progressbar-container {
@@ -73,16 +69,17 @@
 
 .WordPress-installer .terminal.in {
   height:400px;
+  width: 800px;
 }
 
 .WordPress-installer .main-button {
   background: #1AAF5D;
   top: -4px;
   margin:15px;
-  left: 150px;
+  left: 50%;
   width:260px;
   height: 40px !important;
-  margin-left:-150px;
+  margin-left:-130px;
 }
 
 
@@ -187,6 +184,7 @@
 
 .WordPress-installer .running-link {
   text-align: center;
+  width: 800px;
   padding: 15px 0;
   border-bottom: 1px solid #ddd;
   border-top: 1px solid #ddd;
